@@ -16,6 +16,7 @@ import com.badlogic.gdx.utils.Array;
 import org.mini2Dx.core.controller.button.Xbox360Button;
 import org.mini2Dx.core.controller.deadzone.DeadZone;
 import org.mini2Dx.core.controller.deadzone.NoopDeadZone;
+import org.mini2Dx.core.controller.deadzone.RadialDeadZone;
 import org.mini2Dx.core.controller.xbox360.Xbox360ControllerListener;
 
 /**
@@ -28,6 +29,8 @@ public abstract class Xbox360Controller implements MdxController<Xbox360Controll
     private final Array<Xbox360ControllerListener> listeners = new Array<>(true,2);
     
     private DeadZone leftStickDeadZone, rightStickDeadZone;
+    private DeadZone leftTriggerDeadZone, rightTriggerDeadZone;
+    private boolean leftTrigger, rightTrigger;
     
 	public Xbox360Controller(Controller controller) {
 		this(controller, new NoopDeadZone(), new NoopDeadZone());
@@ -37,6 +40,8 @@ public abstract class Xbox360Controller implements MdxController<Xbox360Controll
 		this.controller = controller;
 		this.leftStickDeadZone = leftStickDeadZone;
 		this.rightStickDeadZone = rightStickDeadZone;
+		this.leftTriggerDeadZone = new RadialDeadZone();
+		this.rightTriggerDeadZone = new RadialDeadZone();
 		controller.addListener(this);
 	}
 
@@ -66,6 +71,14 @@ public abstract class Xbox360Controller implements MdxController<Xbox360Controll
 	}
 	
 	protected boolean notifyLeftTriggerMoved(float value) {
+		leftTriggerDeadZone.updateY(value);
+		if(leftTriggerDeadZone.getY() >= 0.5f && !leftTrigger) {
+			notifyButtonDown(Xbox360Button.LEFT_TRIGGER);
+			leftTrigger = true;
+		} else if(leftTriggerDeadZone.getY() < 0.5f && leftTrigger) {
+			notifyButtonUp(Xbox360Button.LEFT_TRIGGER);
+			leftTrigger = false;
+		}
 		for(Xbox360ControllerListener listener : listeners) {
 			if(listener.leftTriggerMoved(this, value)) {
 				return true;
@@ -75,6 +88,14 @@ public abstract class Xbox360Controller implements MdxController<Xbox360Controll
 	}
 	
 	protected boolean notifyRightTriggerMoved(float value) {
+		rightTriggerDeadZone.updateY(value);
+		if(rightTriggerDeadZone.getY() >= 0.5f && !rightTrigger) {
+			notifyButtonDown(Xbox360Button.RIGHT_TRIGGER);
+			rightTrigger = true;
+		} else if(rightTriggerDeadZone.getY() < 0.5f && rightTrigger) {
+			notifyButtonUp(Xbox360Button.RIGHT_TRIGGER);
+			rightTrigger = false;
+		}
 		for(Xbox360ControllerListener listener : listeners) {
 			if(listener.rightTriggerMoved(this, value)) {
 				return true;
@@ -176,5 +197,27 @@ public abstract class Xbox360Controller implements MdxController<Xbox360Controll
 
 	public void setRightStickDeadZone(DeadZone rightStickDeadZone) {
 		this.rightStickDeadZone = rightStickDeadZone;
+	}
+
+	public DeadZone getLeftTriggerDeadZone() {
+		return leftTriggerDeadZone;
+	}
+
+	public void setLeftTriggerDeadZone(DeadZone leftTriggerDeadZone) {
+		if(leftTriggerDeadZone == null) {
+			leftTriggerDeadZone = new NoopDeadZone();
+		}
+		this.leftTriggerDeadZone = leftTriggerDeadZone;
+	}
+
+	public DeadZone getRightTriggerDeadZone() {
+		return rightTriggerDeadZone;
+	}
+
+	public void setRightTriggerDeadZone(DeadZone rightTriggerDeadZone) {
+		if(rightTriggerDeadZone == null) {
+			rightTriggerDeadZone = new NoopDeadZone();
+		}
+		this.rightTriggerDeadZone = rightTriggerDeadZone;
 	}
 }
